# Corvus-agent

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  INSTALL.md  LICENSE  README.md  checkpoints.py  cli.py  config.yaml  index.py  main.py  models.py  plan.py  promote.py  pyproject.toml  repo.py  requirements.txt  scheduler.py  server.py  settings.py  setup.py  team.py  telemetry.py  termux-install.sh  verifier.py
.github/workflows/: Ci.yml
agent/: core.py  llm.py  orchestrator.py  search.py  session.py  tools.py
community/: README.md  skills-starter.json
evals/: benchmark.py  tasks.json
improve/: evolve.py  reflect.py
memory/: _client.py  episodic.py  lessons.py  lite.py  notes.py  skills.py
mobile/: App.js  README.md  app.json  package.json
mobile/src/: api.js
sandbox/: runner.py
tests/: mock_llm.py  test_agent_core.py  test_bench_regression.py  test_checkpoints.py  test_edit.py  test_fixes.py  test_index.py  test_lite.py  test_migrate.py  test_mobile.py  test_observability.py  test_orchestrator.py  test_plan.py  test_promote.py  test_pwa.py  test_repo.py  test_sandbox.py  test_sandbox_backend.py  test_scheduler.py  test_search.py  test_server.py  test_team.py  test_tools.py  test_verifier.py
verify/: verify_bench.py  verify_checkpoints.py  verify_features.py  verify_improve.py  verify_live.py
web/: __init__.py  app.js  gen_icons.py  index.html  manifest.webmanifest  sw.js
